<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <ImageView
        android:id="@+id/launcher_pic"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/launcher_pic" />


    <LinearLayout
        android:id="@+id/buttonPane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />
    </LinearLayout>

    <TextView
        android:id="@+id/launcher_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonPane"
        android:gravity="center_horizontal"
        android:text="@string/launcher_message2"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/launcher_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/launcher_message2"
        android:gravity="center_horizontal"
        android:text="@string/launcher_message1"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />
</RelativeLayout>
