<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.LauncherActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.musicalstructure.LauncherActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff00ff"
            android:text="@string/activity_main_description"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

        <Button
            android:id="@+id/view_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#f48024"
            android:padding="4dp"
            android:text="@string/view_playlist"
            android:textSize="24sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/new_and_trending"
            android:textSize="18sp" />
        <!--Setting New and Trending Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#e0eaf1"
            android:orientation="horizontal"
            android:padding="2dp">
            <!--First Category-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/weekly_top_15"
                    android:layout_width="wrap_content"
                    android:layout_height="128sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/weeklytop15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/weekly_top_15" />
            </LinearLayout>
            <!--Second Category-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/artist1"
                    android:layout_width="wrap_content"
                    android:layout_height="128sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sonunigam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/artist1" />
            </LinearLayout>
            <!--Third Category-->
            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/recent_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="128sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/recent_movies" />
            </LinearLayout>
        </LinearLayout>
        <!--New Section of Browse and Discover-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/browe_and_discover"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/party"
                        android:layout_width="wrap_content"
                        android:layout_height="128sp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mirzya"
                        tools:text="Party" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Party" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/ghazal"
                        android:layout_width="wrap_content"
                        android:layout_height="128sp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/aedil"
                        tools:text="Ghazal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Ghazal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/romance"
                        android:layout_width="wrap_content"
                        android:layout_height="128sp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/dochardin"
                        tools:text="Romance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Romance" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/chill"
                        android:layout_width="wrap_content"
                        android:layout_height="128sp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/longdrive"
                        tools:text="Chill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Chill" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="#c8531f"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing" />

            <LinearLayout
                android:layout_width="256sp"
                android:layout_height="wrap_content"
                android:background="#dddd00"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/skip_previous"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_skip_previous_white_24dp" />

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play_arrow_white_24dp" />

                <ImageView
                    android:id="@+id/skip_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_skip_next_white_24dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Sign out"
            android:textAllCaps="true" />
    </LinearLayout>

</ScrollView>
